Resolved defect #674199 to limit spacing on crosssell on IE8

--- a/webroot/skin/frontend/blueacorn/mis/css/styles.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles.css
@@ -3889,6 +3889,9 @@ p.product-name {
 .products-grid .add-to-links {
   margin-bottom: 0; }
 
+.ie8 .crosssell .product-info {
+  min-height: 270px !important; }
+
 /* Config: Two columns + flexible gutter */
 .products-grid > li {
   float: left;
